# CEBRA

./: .clabot  .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  NOTICE.yml  PKGBUILD  README.md  README.rst  build_docs.sh  conftest.py  pyproject.toml  reinstall.sh  setup.cfg
.github/: pr_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  doc-coverage.yml  docs.yml  latest.yml  release-pypi.yml
cebra/: __init__.py  __main__.py  config.py  grid_search.py  helper.py  io.py  registry.py
cebra/attribution/: __init__.py  _jacobian.py  attribution_models.py  jacobian.py  jacobian_attribution.py
cebra/data/: __init__.py  assets.py  base.py  datasets.py  datatypes.py  helper.py  load.py  mask.py  masking.py  multi_session.py  multiobjective.py  single_session.py
cebra/datasets/: __init__.py  assets.py  demo.py  gaussian_mixture.py  generate_synthetic_data.py  hippocampus.py  make_neuropixel.py  make_nlb.py  make_nlb_data.py  make_perich.py  monkey_reaching.py  nlb.py  nlb_data.py  perich.py  poisson.py  poyo_data.py  save_dataset.py  synthetic_data.py
cebra/datasets/allen/: __init__.py  ca_movie.py  ca_movie_decoding.py  combined.py  make_neuropixel.py  neuropixel_movie.py  neuropixel_movie_decoding.py  single_session_ca.py
cebra/distributions/: __init__.py  base.py  continuous.py  discrete.py  index.py  mixed.py  multisession.py  vmf.py
cebra/integrations/: __init__.py  decoders.py  deeplabcut.py  matplotlib.py  plotly.py
cebra/integrations/sklearn/: __init__.py  cebra.py  dataset.py  decoder.py  helpers.py  metrics.py  utils.py
cebra/models/: __init__.py  criterions.py  decoders.py  jacobian_regularizer.py  layers.py  model.py  multi_criterions.py  multicriterions.py  multiobjective.py  projector.py
cebra/solver/: __init__.py  base.py  metrics.py  multi_session.py  multiobjective.py  regularized.py  schedulers.py  single_session.py  supervised.py  unified_session.py  util.py
conda/: cebra.yml  cebra_paper.yml  cebra_paper_m1.yml
demo_notebooks/: .gitignore  Demo_Allen.ipynb  Demo_cohomology.ipynb  Demo_consistency.ipynb  Demo_conv-pivae.ipynb  Demo_decoding.ipynb  Demo_hippocampus.ipynb  Demo_hippocampus_multisession.ipynb  Demo_hypothesis_testing.ipynb  Demo_learnable_temperature.ipynb  Demo_primate_reaching.ipynb  Demo_primate_reaching_mse_loss.ipynb  Demo_synthetic_exp.ipynb  README.rst
docs/: .gitignore  Dockerfile  Makefile  README.md  requirements.txt
docs/root/: CNAME  index.html  robots.txt
docs/source/: .gitignore  api.rst  conf.py  contributing.rst  demos.rst  figures.rst  index.rst  installation.rst  usage.rst
docs/source/_static/css/: custom.css  custom.js
docs/source/_templates/: layout.html
docs/source/api/integrations/: data.rst  deeplabcut.rst  matplotlib.rst  plotly.rst
docs/source/api/pytorch/: attribution.rst  data.rst  datasets.rst  distributions.rst  helpers.rst  integrations.rst  models.rst  multiobjective.rst  regularized.rst  solvers.rst
docs/source/api/sklearn/: cebra.rst  decoder.rst  helpers.rst  metrics.rst
docs/source/api/xcebra/: multiobjective.rst
examples/: synthetic_data.pkl  train_and_evaluate.ipynb  train_and_evaluate_scd.ipynb
tests/: _util.py  _utils_deprecated.py  generate_cuda_checkpoint.py  test_api.py  test_attribution.py  test_benchmark.py  test_cli.py  test_criterions.py  test_data_helper.py  test_data_masking.py  test_datasets.py  test_demo.py  test_distributions.py  test_dlc.py  test_grid_search.py  test_index.py  test_integration_train.py  test_integration_xcebra.py  test_io.py  test_load.py  test_loader.py  test_models.py  test_multiobjective.py  test_plot.py  test_plotly.py  test_registry.py  test_sklearn.py  test_sklearn_decoder.py  test_sklearn_legacy.py  test_sklearn_metrics.py  test_solver.py  test_solver_batched.py  test_usecases.py
tests/_build_legacy_model/: Dockerfile  README.md  create_model.py  generate.sh
tests/_reference_implementations/: __init__.py  deprecated_transforms.py  reference_offset_models.py
tests/test_data/cuda_saved_checkpoint/: data.pkl
tests/test_data/cuda_saved_checkpoint/.data/: serialization_id
tests/test_data/cuda_saved_checkpoint/data/: 0  1  11  12  13  14  15  17  18  2  20  21  23  24  26  27  29  3  30  32  33  35  36  38  39  4  40  5  6  7  8  9
tools/: build_docker.sh  build_docs.sh  bump_version.sh  check_for_binary_files.sh  get_cebra_version.sh  update_license_headers.py
