[metadata]
name = cebra
version = attr: cebra.__version__
author = Steffen Schneider, Jin H Lee, Mackenzie W Mathis
author_email = stes@hey.com
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
url = https://github.com/AdaptiveMotorControlLab/CEBRA
project_urls =
    Bug Tracker = https://github.com/AdaptiveMotorControlLab/CEBRA/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
where = 
    - .
    - tests
python_requires = >=3.8
install_requires =
    joblib
    literate-dataclasses
    scikit-learn
    scipy
    torch
    tqdm

[options.extras_require]
datasets =
    # cebra.datasets.allen
    h5py
    pandas
    # NOTE(stes): The following dependency is used for the datasets in
    # cebra.datasets.monkey_reaching. It needs to be manually installed,
    # if needed.
    # nlb_tools @ git+https://github.com/neurallatents/nlb_tools@065cb137ea3f9ecff4d237d2d404bf7a3c2890de
    # additional data loading dependencies
    hdf5storage # for creating .mat files in new format
    openpyxl # for excel file format loading
integrations =
docs =
    sphinx==5.3
    docutils
    pydata-sphinx-theme==0.9.0
    sphinx_autodoc_typehints==1.19
    sphinx_copybutton
    sphinx_tabs
    nbsphinx
    nbconvert
    ipykernel
demos =
    ipykernel
    jupyter
    nbconvert
    # TODO(stes): Additional dependency for running
    # is ripser, which can be tricky to
    # install on some systems.
    # Please follow these instructions
    # directly:
    # https://pypi.org/project/ripser/
dev =
    pylint
    toml
    yapf
    black
    isort
    toml
    coverage
    pytest
    pytest-benchmark
    pytest-xdist
    pytest-timeout
    licenseheaders
    # TODO(stes) Add back once upstream issue
    # https://github.com/PyCQA/docformatter/issues/119
    # is resolved.
    # docformatter[tomli]

[bdist_wheel]
universal=1
