[metadata]
name = cebra
version = attr: cebra.__version__
author = Steffen Schneider, Jin H Lee, Mackenzie W Mathis
author_email = stes@hey.com
description = Consistent Embeddings of high-dimensional Recordings using Auxiliary variables
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
license_file_type = text/markdown
url = https://github.com/AdaptiveMotorControlLab/CEBRA
project_urls =
    Bug Tracker = https://github.com/AdaptiveMotorControlLab/CEBRA/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    # NOTE(stes): Upgrade according to https://github.com/pypa/trove-classifiers/issues/17#issuecomment-385027197
    # once the new classifiers are published
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
where =
    - .
    - tests
python_requires = >=3.8
install_requires =
    joblib
    literate-dataclasses
    scikit-learn
    scipy
    torch
    tqdm
    matplotlib
    requests

[options.extras_require]
datasets =
    # cebra.datasets.allen
    h5py
    pandas
    nlb_tools
    # additional data loading dependencies
    hdf5storage # for creating .mat files in new format
    openpyxl # for excel file format loading
integrations =
    jupyter
    pandas
    plotly
docs =
    sphinx==5.3
    sphinx-gallery==0.10.1
    docutils
    pydata-sphinx-theme==0.9.0
    sphinx_autodoc_typehints==1.19
    sphinx_copybutton
    sphinx_tabs
    sphinx_design
    sphinx_togglebutton
    nbsphinx
    nbconvert
    ipykernel
    matplotlib<=3.5.2
    pandas
    seaborn
    scikit-learn<1.3
demos =
    ipykernel
    jupyter
    nbconvert
    seaborn
    # TODO(stes): Additional dependency for running
    # co-homology analysis
    # is ripser, which can be tricky to
    # install on some systems.
    # Please follow these instructions
    # directly:
    # https://pypi.org/project/ripser/
dev =
    pylint
    toml
    yapf
    black
    isort
    toml
    coverage
    pytest
    pytest-benchmark
    pytest-xdist
    pytest-timeout
    pytest-sphinx
    tables<=3.8
    licenseheaders
    # TODO(stes) Add back once upstream issue
    # https://github.com/PyCQA/docformatter/issues/119
    # is resolved.
    # docformatter[tomli]
    codespell
    cffconvert

[bdist_wheel]
universal=1
